infra/dynamic_nginx/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-nginx
  labels:
    app: dynamic-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-nginx
  template:
    metadata:
      labels:
        app: dynamic-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: confnginx

---

kind: Service
apiVersion: v1
metadata:
  name: nginx-custom
spec:
  selector:
    app: dynamic-nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: nginx
