infra/dynamic_nginx/_ingress.yml
# any request to /something/tarunn.co will fo to nginx-custom service

#  Don't really need it as Ingress kind is used for external facing svc, and this nginx dynamic proxy is internal

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-custom
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: '*.tarunn.co'
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-custom
          servicePort: 80
